--- a/build.gradle
+++ b/build.gradle
@@ -2,15 +2,15 @@ buildscript {
     ext {
         compose_compiler_version = '1.4.7'
         compose_version = '1.4.3'
-        material3_version = '1.1.0'
+        material3_version = '1.1.1'
     }
 }
 plugins {
-    id 'com.android.application' version '7.4.2' apply false
-    id 'com.android.library' version '7.4.2' apply false
+    id 'com.android.application' version '8.0.2' apply false
+    id 'com.android.library' version '8.0.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.20' apply false
 }
 
-task clean(type: Delete) {
+tasks.register('clean', Delete) {
     delete rootProject.buildDir
 }
